# SaturnMoonLibrary

./: data_analysis.ipynb  ringpotential.ipynb  simulation.pyd  simulation_notebook.ipynb
Archive/: To do List.txt
Archive/Alexanders ringen/: simulation10 (1).cpp
Archive/Archive Analysis/: New_plot_code.ipynb  New_plot_code_Koen.ipynb  data_analysis_koen.ipynb  plotclass Koen.ipynb  plotclass.ipynb
Archive/Archive Simulation/: Debugging_notebook.ipynb  orbital elements.py
Archive/Archive of old dataset generation/: Initializing_dataset.ipynb  functions_archive.ipynb  rotate.py  rotatingupright.ipynb
READ ME/: READ ME.txt  README.md  tree.txt
READ ME/SaturnMoonAnalysis/: EnergyAnalysis.py  data_class.py  wave_analysis.py  wave_stills.py
SatrunMoonLibrary/: utils.py
SatrunMoonLibrary/SaturnMoonAnalysis/: __init__.py  animation_manager.py  collision_analysis.py  wave_analysis.py  wave_densities.py  wave_stills.py
SatrunMoonLibrary/SaturnMoonSimulation/: __init__.py  horizons_api.py  horizons_long_format_database.py  rotate.py  simulation_database.py  utils.py  write_to_file.py
SatrunMoonLibrary/SaturnMoonSimulation/SimulationFolder/: CMakeLists.txt  Commands for building binder.txt  Cpp_code_builder.ps1  simulation10.cpp  simulation10.h  simulation_binding.cpp
SaturnModelDatabase/horizons_data/: Information_about_the_initial_datasets.txt
SaturnModelDatabase/horizons_long_format_data/: horizons_long_format_log_file.txt
SaturnModelDatabase/simulation_data/: simulation_log_file.txt  simulation_log_file_koen.txt
(+9 files in other folders)
